fix: html overflow-x hidden 추가, 팝업 width 100% 적용

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@
 html {
   scroll-behavior: smooth;
   scroll-padding-top: 70px;
+  overflow-x: hidden;
 }
 
 body {
